# hackrf-rc-car

./: 35MHz_RC_CAR_remote.odt  CMakeLists.txt  README.md
rc_car_hackrf_27MHz/: car.h  main.c  rc_car_hackrf.cbp  rf.c  rf.h
rc_car_hackrf_41MHz/: car.c  car.h  main.c  rc_car_hackrf.cbp  rf.c  rf.h
